--- a/Data/READMEs/RM_PerformanceMeasurement.tex
+++ b/Data/READMEs/RM_PerformanceMeasurement.tex
@@ -102,7 +102,7 @@ combination, which is computed in the script `PerformanceMeasurement.R'.
 measurement}\label{the-goal-of-our-performance-measurement}}
 
 After training a model it is important to check how well it performes.
-Since we not only trained one model but 120 in total (6 algos * 5
+Since we not only trained one model but 120 in total (6 algorithms * 5
 samplings * 4 positions), it is even more important to compare all the
 different models to see which one is the best. For our business case,
 this means that we want to see which combination of method and sampling
@@ -290,16 +290,9 @@ position on its own. The horizontal lines show the no information rates
 for the accuracy, which displays, how a model's performance would be
 when predicting only 0's.
 
-\newsection
+\includegraphics[width=0.95\linewidth]{Plots_8}
 
-\begin{figure}
-\hypertarget{id}{%
-\centering
-\includegraphics[width=0.8\textwidth,height=\textheight]{Plots_8.jpg}
-\caption{Plotted Accuracy and F1-Score by position and sampling
-method}\label{id}
-}
-\end{figure}
+\newpage
 
 \hypertarget{our-best-models}{%
 \subsection{Our best models}\label{our-best-models}}
