--- a/Data/READMEs/RM_PerformanceMeasurement.tex
+++ b/Data/READMEs/RM_PerformanceMeasurement.tex
@@ -355,7 +355,7 @@ describes it, and \(\epsilon\) is the noise, which appears to be random.
 With our models (the left part) we try to predict a \(\hat{Y}\), which
 shall be as close as possible to the true Y.
 
-\[\hat{f}(X) = \hat{Y} \approx Y = f(X) + \varepsilon\]
+\[\hat{f}(X) = \hat{Y} \longrightarrow Y = f(X) + \varepsilon\]
 
 Looking at this inequation we can think of three possibilities, why our
 models make so many mistakes:
